--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,13 @@ asgiref==3.5.0
 Django==4.0.2
 django-filter==21.1
 djangorestframework==3.13.1
+flake8==3.9.2
+flake8-django==1.1.2
 Markdown==3.3.6
+mccabe==0.6.1
 psycopg2==2.9.3
+pycodestyle==2.7.0
+pyflakes==2.3.1
 pytz==2021.3
 sqlparse==0.4.2
 tzdata==2021.5
